--- a/package.json
+++ b/package.json
@@ -7,9 +7,7 @@
     "serve": "vite preview"
   },
   "devDependencies": {
-    "vite": "^2.4.4"
-  },
-  "dependencies": {
+    "vite": "^2.4.4",
     "gitmoji-cli": "^4.5.1"
   }
 }
